# react-django

./: .eslintcache  .gitignore  package-lock.json  package.json  pyproject.toml
backend/: settings.py  urls.py
customers/: models.py  views.py
customers/migrations/: 0001_initial.py  0002_customers.py
src/: App.css
